--- a/VidRen/Views/Movies/Random.cshtml
+++ b/VidRen/Views/Movies/Random.cshtml
@@ -1,8 +1,8 @@
-﻿@model VidRen.Models.Movie
+﻿@model VidRen.ViewModels.RandomMovieViewModel
 @{
     ViewBag.Title = "Random";
     Layout = "~/Views/Shared/_Layout.cshtml";
 }
 
-<h2>@Model.Name</h2>
+<h2>@Model.Movie.Name</h2>
 
