Create index and details pages for movies

--- a/VidRen/Views/Movies/Index.cshtml
+++ b/VidRen/Views/Movies/Index.cshtml
@@ -16,7 +16,7 @@
         {
             <tr>
                 <td>
-                    @movie.Name
+                    @Html.ActionLink(movie.Name, "Details", "Movies", new { id = movie.Id }, null)
                 </td>
             </tr>
         }
