--- a/VidRen/Views/Movies/MovieForm.cshtml
+++ b/VidRen/Views/Movies/MovieForm.cshtml
@@ -17,7 +17,7 @@
         @Html.TextBoxFor(m => m.Movie.ReleaseDate, "{0:d MMM yyyy}", new { @class = "form-control" })
     </div>
     <div class="form-group">
-        @Html.LabelFor(m => m.Movie.Genre)
+        @Html.LabelFor(m => m.Movie.GenreId)
         @Html.DropDownListFor(m => m.Movie.GenreId, new SelectList(Model.Genres, "Id", "Name"), "Select Genre", new { @class = "form-control" })
     </div>
     <div class="form-group">
