Add validation summary to movie form

--- a/VidRen/Views/Movies/MovieForm.cshtml
+++ b/VidRen/Views/Movies/MovieForm.cshtml
@@ -8,6 +8,7 @@
 
 @using (Html.BeginForm("Save", "Movies"))
 {
+    @Html.ValidationSummary()
     <div class="form-group">
         @Html.LabelFor(m => m.Movie.Name)
         @Html.TextBoxFor(m => m.Movie.Name, new { @class="form-control" })
