--- a/VidRen/Views/Movies/MovieForm.cshtml
+++ b/VidRen/Views/Movies/MovieForm.cshtml
@@ -32,3 +32,8 @@
     @Html.HiddenFor(m => m.Movie.Id)
     <button type="submit" class="btn btn-primary">Save</button>
 }
+
+@section scripts
+{
+    @Scripts.Render("~/bundles/jqueryval")
+}
