--- a/VidRen/Views/Customers/Index.cshtml
+++ b/VidRen/Views/Customers/Index.cshtml
@@ -27,7 +27,7 @@ else
                     <td>@Html.ActionLink(customer.Name, "Edit", "Customers", new { id = customer.Id }, null)</td>
                     <td>@customer.MembershipType.Name</td>
                     <td>
-                        <button class="btn btn-link js-delete">Delete</button>
+                        <button data-customer-id="@customer.Id" class="btn btn-link js-delete">Delete</button>
                     </td>
                 </tr>
             }
@@ -40,7 +40,15 @@ else
     <script>
         $(document).ready(function () {
             $("#customers .js-delete").on("click", function () {
-                confirm("Are you sure you want to delete this customer?");
+                if (confirm("Are you sure you want to delete this customer?")) {
+                    $.ajax({
+                        url: '/api/customers/' + $(this).attr("data-customer-id"),
+                        method: 'DELETE',
+                        success: function () {
+                            console.log("Successful");
+                        }
+                    });
+                };
             });
         });
     </script>
