--- a/VidRen/Views/Customers/Index.cshtml
+++ b/VidRen/Views/Customers/Index.cshtml
@@ -1,17 +1,9 @@
-﻿@model IEnumerable<VidRen.Models.Customer>
-@{
+﻿@{
     ViewBag.Title = "Index";
     Layout = "~/Views/Shared/_Layout.cshtml";
 }
 
 <h2>Customers</h2>
-
-@if (!Model.Any())
-{
-    <p>We don't have any customers yet.</p>
-}
-else
-{
     <table id="customers" class="table table-bordered table-hover">
         <thead>
             <tr>
@@ -21,25 +13,36 @@ else
             </tr>
         </thead>
         <tbody>
-            @foreach (var customer in Model)
-            {
-                <tr>
-                    <td>@Html.ActionLink(customer.Name, "Edit", "Customers", new { id = customer.Id }, null)</td>
-                    <td>@customer.MembershipType.Name</td>
-                    <td>
-                        <button data-customer-id="@customer.Id" class="btn btn-link js-delete">Delete</button>
-                    </td>
-                </tr>
-            }
         </tbody>
     </table>
-}
 
 @section scripts
 {
     <script>
         $(document).ready(function () {
-            $("#customers").DataTable();
+            $("#customers").DataTable({
+                ajax: {
+                    url: '/api/customers',
+                    dataSrc: ""
+                },
+                columns: [
+                    {
+                        data: "name",
+                        render: function (data, type, customer) {
+                            return "<a href='/customers/edit/" + customer.id + "'>" + customer.name + "</a>";
+                        }
+                    },
+                    {
+                        data: "membershipTypeId"
+                    },
+                    {
+                        data: "id",
+                        render: function (data) {
+                            return "<button class='btn-link js-delete' data-customer-id=" + data + ">Delete</button>";
+                        }
+                    }
+                ]
+            });
 
             $("#customers").on("click", "js-delete", function () {
                 var button = $(this);
