Make use of eager loading to return the membership type name

--- a/VidRen/Views/Customers/Index.cshtml
+++ b/VidRen/Views/Customers/Index.cshtml
@@ -33,7 +33,7 @@
                         }
                     },
                     {
-                        data: "membershipTypeId"
+                        data: "membershipType.name"
                     },
                     {
                         data: "id",
