Remove records from DataTable

--- a/VidRen/Views/Customers/Index.cshtml
+++ b/VidRen/Views/Customers/Index.cshtml
@@ -20,7 +20,7 @@
 {
     <script>
         $(document).ready(function () {
-            $("#customers").DataTable({
+            var table = $("#customers").DataTable({
                 ajax: {
                     url: '/api/customers',
                     dataSrc: ""
@@ -38,22 +38,22 @@
                     {
                         data: "id",
                         render: function (data) {
-                            return "<button class='btn-link js-delete' data-customer-id=" + data + ">Delete</button>";
+                            return "<button class='btn btn-link js-delete' data-customer-id=" + data + ">Delete</button>";
                         }
                     }
                 ]
             });
 
-            $("#customers").on("click", "js-delete", function () {
+            $("#customers").on("click", ".js-delete", function () {
                 var button = $(this);
 
                 bootbox.confirm("Are you sure you want to delete this customer?", function (result) {
                     if (result) {
                         $.ajax({
-                            url: '/api/customers/' + button.attr("data-customer-id"),
-                            method: 'DELETE',
+                            url: "/api/customers/" + button.attr("data-customer-id"),
+                            method: "DELETE",
                             success: function () {
-                                button.parents("tr").remove();
+                                table.row(button.parents("tr")).remove().draw();
                             }
                         });
                     }
